--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+```html
 <!doctype html>
 <html lang="id">
   <head>
@@ -8,13 +9,48 @@
   </head>
   <body>
     <h1>Daftar Tugas</h1>
-    <ul>
-      <h2>Fromulir Reservasi Hotel</h1>
-      <li>
-        <a href="Reservasi%20Hotel/Formulir-Reservasi-Hotel.xhtml" target="_blank" rel="noopener">
-          Formulir Reservasi Hotel
-        </a>
-      </li>
-    </ul>
+
+    <section>
+      <h2>Formulir Reservasi Hotel</h2>
+      <ul>
+        <li>
+          <a href="Reservasi%20Hotel/Formulir-Reservasi-Hotel.xhtml" target="_blank" rel="noopener">
+            Formulir Reservasi Hotel
+          </a>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Activity 9</h2>
+      <ul>
+        <li>
+          <a href="activity-mandiri/index.xhtml" target="_blank" rel="noopener">
+            activity-mandiri / index.xhtml
+          </a>
+        </li>
+        <li>
+          <a href="xhtml-javascript-form-validation/index.xhtml" target="_blank" rel="noopener">
+            xhtml-javascript-form-validation / index.xhtml
+          </a>
+        </li>
+        <li>
+          <a href="xhtml-javascript-if-else-eksternal/index.xhtml" target="_blank" rel="noopener">
+            xhtml-javascript-if-else-eksternal / index.xhtml
+          </a>
+        </li>
+        <li>
+          <a href="xhtml-javascript-if-else-internal/index.xhtml" target="_blank" rel="noopener">
+            xhtml-javascript-if-else-internal / index.xhtml
+          </a>
+        </li>
+        <li>
+          <a href="xhtml-javascript-switch-case-internal/index.xhtml" target="_blank" rel="noopener">
+            xhtml-javascript-switch-case-internal / index.xhtml
+          </a>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
+```
