--- a/Activity 9/xhtml-javascript-if-else-internal/index.xhtml
+++ b/Activity 9/xhtml-javascript-if-else-internal/index.xhtml
@@ -9,7 +9,7 @@
         var sMF;
 
         iAge = prompt("Please enter your age in years.", 0);
-        SMF = prompt("Are you a (M)ale or (F)emale?", "M");
+        sMF = prompt("Are you a (M)ale or (F)emale?", "M");
 
         if (iAge > 20) {
             if (sMF == "M") {
@@ -28,7 +28,8 @@
     </head>
 <body>
     <h1>Demo If-Else (Internal Script)</h1>
-    <p>Reload halaman untuk mencoba lagi.< /p>
+    <p>Reload halaman untuk mencoba lagi.</p>
 </body>
 
 </html>
+
