--- a/Activity 9/xhtml-javascript-if-else-internal/index.xhtml
+++ b/Activity 9/xhtml-javascript-if-else-internal/index.xhtml
@@ -18,7 +18,7 @@
                 alert("You are a female over 20 years of age");
             }
         } else {
-            if (sMF == "F") {
+            if (sMF == "M") {
                 alert("You are a male under the age of 21");
             } else {
                 alert("You are a female under the age of 21");
@@ -32,4 +32,5 @@
 </body>
 
 </html>
+
 
