--- a/index.html
+++ b/index.html
@@ -30,5 +30,14 @@
         <li><a href="Activity%209/xhtml-javascript-switch-case-internal/index.xhtml" target="_blank" rel="noopener">xhtml-javascript-switch-case-internal / index.xhtml</a></li>
       </ul>
     </section>
+
+    <section>
+      <h2>Activity 10</h2>
+      <ul>
+        <li><a href="Activity%2010/NoDomCalculator/index.xhtml" target="_blank" rel="noopener">NoDomCalculator / index.xhtml</a></li>
+        <li><a href="Activity%2010/DomCalculator/index.xhtml" target="_blank" rel="noopener">DomCalculator / index.xhtml</a></li>
+      </ul>
+    </section>
+
   </body>
 </html>
