--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <section>
       <h2>Activity 10</h2>
       <ul>
-        <li><a href="Activity%2010/NoDomCalculator/index.xhtml" target="_blank" rel="noopener">NoDomCalculator / index.xhtml</a></li>
-        <li><a href="Activity%2010/DomCalculator/index.xhtml" target="_blank" rel="noopener">DomCalculator / index.xhtml</a></li>
+        <li><a href="Activity10/NoDomCalculator/index.xhtml" target="_blank" rel="noopener">NoDomCalculator / index.xhtml</a></li>
+        <li><a href="Activity10/DomCalculator/index.xhtml" target="_blank" rel="noopener">DomCalculator / index.xhtml</a></li>
       </ul>
     </section>
 
